--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Start Bootstrap</title>
+    <title>Boolean</title>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -16,5 +16,51 @@
 </head>
 
 <body>
+
+    <header class="sticky-top">
+
+    </header>
+
+    <nav id="main-nav">
+
+        <!-- top nav -->
+        <ul class="nav flex-column">
+          <li class="nav-item ms-nav-item">
+              <i class="fa-solid fa-house"></i><a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item ms-nav-item">
+              <i class="fa-solid fa-chart-simple"></i><a class="nav-link" href="#">Stats</a>
+          </li>
+          <li class="nav-item ms-nav-item">
+              <i class="fa-solid fa-signal"></i><a class="nav-link" href="#">Signals</a>
+          </li>
+        </ul>
+
+        <!-- bottom nav -->
+        <ul class="nav flex-column">
+          <li class="nav-item ms-nav-item">
+              <i class="fa-solid fa-gear"></i><a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+        </ul>
+    </nav>
+
+    <main id="main-content">
+
+        <div class="container">
+            <div class="row">
+
+                <!-- prossime classi e faq -->
+                <div class="col">
+
+                </div>
+
+                <!-- todo e grafico -->
+                <div class="col">
+
+                </div>
+            </div>
+        </div>
+
+    </main>
     
 </body>
