completed main nav for desktop

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         </ul>
 
         <!-- bottom nav -->
-        <ul class="nav flex-column">
+        <ul class="nav flex-column justify-content-end">
           <li class="nav-item ms-nav-item">
-              <i class="fa-solid fa-gear"></i><a class="nav-link active" aria-current="page" href="#">Home</a>
+              <i class="fa-solid fa-gear"></i><a class="nav-link active" aria-current="page" href="#">Admin</a>
           </li>
         </ul>
     </nav>
