--- a/index.html
+++ b/index.html
@@ -18,7 +18,42 @@
 <body>
 
     <header class="sticky-top">
+        <div class="container-fluid text-center">
+            <div class="row justify-content-between align-items-center">
 
+                <!-- logo -->
+                <div class="col-auto">
+                    <a class="navbar-brand mobile-logo" href="#">
+                        <img src="img/mobile-logo.png" alt="Logo" width="52" height="52" class="d-inline-block align-text-center">
+                    </a>
+
+                    <a class="navbar-brand desktop-logo" href="#">
+                        <img src="img/logo.svg" alt="Logo" width="140" height="52" class="d-inline-block align-text-center">
+                    </a>
+                </div>  
+
+                <!-- search bar -->
+                <div class="col-8">
+                    <form class="container">
+                        <div class="input-group d-flex">
+                            <i class="fa-solid fa-magnifying-glass" id="basic-addon1"></i>
+                            <input type="search" class="form-control" placeholder="Prova a cercare: Lezioni di lavarel" aria-describedby="basic-addon1">
+                        </div>
+                    </form>
+                </div>
+
+                <!-- icone -->
+                <div class="col-auto">
+                    <div class="icon-header">
+                        <i class="desktop-icon fa-solid fa-list"></i>
+                        <i class="desktop-icon fa-solid fa-circle-question"></i>
+                        <i class="desktop-icon fa-solid fa-ellipsis-vertical"></i>
+                        <i class="fa-solid fa-bell"></i>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
     </header>
 
     <nav id="main-nav">
